--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -24,12 +24,20 @@ jobs:
         path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
 
     - name: Setup Java 22
-      uses: actions/setup-java@v4
-      with:
-        java-version: '18.0.2'     # The JDK version to make available on the path
-        java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk
-        architecture: x64         # (x64 or x86) - defaults to x64
+      # uses: actions/setup-java@v4
+      # with:
+      #   java-version: '18.0.2'     # The JDK version to make available on the path
+      #   java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk
+      #   architecture: x64         # (x64 or x86) - defaults to x64
 
+
+    - uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+        check-latest: true
+
+        
     - name: List project files and java version
       run: |
           ls -ltr
