--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -15,6 +15,15 @@ jobs:
       run: |
           ls -ltr
           java -version
+          echo "GITHUB_WORKFLOW: ${{ GITHUB_WORKFLOW }}"
+          echo "GITHUB_ACTION: ${{ GITHUB_ACTION }}"
+          echo "GITHUB_ACTOR: ${{ GITHUB_ACTOR }}"
+          echo "GITHUB_REPOSITORY: ${{ GITHUB_REPOSITORY }}"
+          echo "GITHUB_EVENT_NAME: ${{ GITHUB_EVENT_NAME }}"
+          echo "GITHUB_EVENT_PATH: ${{ GITHUB_EVENT_PATH }}"
+          echo "GITHUB_WORKSPACE: ${{ GITHUB_WORKSPACE }}"
+          echo "HOME: ${{ HOME }}"
+          
 
     - name: Check out Apache Tomcat
       uses: actions/checkout@v4
@@ -23,7 +32,7 @@ jobs:
         ref: main               # The branch, tag or SHA to checkout
         path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
 
-    - name: Setup Java 22
+    - name: Setup Java 21
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
