--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -8,16 +8,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: github_env
-      run: |
-          echo "GITHUB_WORKFLOW: ${{ GITHUB_WORKFLOW }}"
-          echo "GITHUB_ACTION: ${{ GITHUB_ACTION }}"
-          echo "GITHUB_ACTOR: ${{ GITHUB_ACTOR }}"
-          echo "GITHUB_REPOSITORY: ${{ GITHUB_REPOSITORY }}"
-          echo "GITHUB_EVENT_NAME: ${{ GITHUB_EVENT_NAME }}"
-          echo "GITHUB_EVENT_PATH: ${{ GITHUB_EVENT_PATH }}"
-          echo "GITHUB_WORKSPACE: ${{ GITHUB_WORKSPACE }}"
-          echo "HOME: ${{ HOME }}"
+    # - name: github_env
+    #   run: |
+    #       echo "GITHUB_WORKFLOW: ${{ GITHUB_WORKFLOW }}"
+    #       echo "GITHUB_ACTION: ${{ GITHUB_ACTION }}"
+    #       echo "GITHUB_ACTOR: ${{ GITHUB_ACTOR }}"
+    #       echo "GITHUB_REPOSITORY: ${{ GITHUB_REPOSITORY }}"
+    #       echo "GITHUB_EVENT_NAME: ${{ GITHUB_EVENT_NAME }}"
+    #       echo "GITHUB_EVENT_PATH: ${{ GITHUB_EVENT_PATH }}"
+    #       echo "GITHUB_WORKSPACE: ${{ GITHUB_WORKSPACE }}"
+    #       echo "HOME: ${{ HOME }}"
           
     - name: Check out tomcat-users.xml
       uses: actions/checkout@v4
